Issue #8283: ignore methods deprecated since Java 9 methods in test inputs